# Computacao_Grafica

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  obj_loader.cpp  obj_loader.h
